@@ -5,7 +5,7 @@ import org.springframework.stereotype.Service;
 import lombok.RequiredArgsConstructor;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 import com.sage.bif.simulation.entity.Simulation;
 import com.sage.bif.simulation.entity.SimulationStep;
 import com.sage.bif.simulation.entity.BifChoice;
@@ -38,30 +38,32 @@ public class SimulationServiceImpl implements SimulationService {
 
     @Override
     public List<SimulationResponse> getAllSimulations() {
+        log.info("시뮬레이션 목록 조회 요청");
         List<Simulation> simulations = simulationRepository.findAll();
         List<SimulationResponse> responses = simulations.stream()
                 .map(SimulationResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        log.info("시뮬레이션 목록 조회 완료: {}개", responses.size());
         return responses;
     }
     
     @Override
     public SimulationSessionResponse startSimulation(Long simulationId) {
+        log.info("시뮬레이션 시작 요청: simulationId={}", simulationId);
+        
         Simulation simulation = simulationRepository.findById(simulationId)
                 .orElseThrow(() -> new SimulationException(SimulationErrorCode.SIM_NOT_FOUND));
         
-        // 첫 번째 단계의 시나리오와 선택지 조회
         SimulationStep firstStep = stepRepository.findBySimulationIdAndStepOrder(simulationId, 1)
                 .orElseThrow(() -> new SimulationException(SimulationErrorCode.SIM_NOT_FOUND));
         
-        // 첫 번째 스텝의 선택지들 조회
         List<BifChoice> firstChoices = choiceRepository.findByStepIdOrderByChoiceId(firstStep.getStepId());
         String[] choiceTexts = firstChoices.stream()
                 .map(BifChoice::getChoiceText)
                 .toArray(String[]::new);
         
-        // 세션 ID 생성 (형식: session_{timestamp}_{simulationId}_{currentStep})
         String sessionId = "session_" + System.currentTimeMillis() + "_" + simulationId + "_1";
+        log.info("시뮬레이션 세션 생성: sessionId={}", sessionId);
         
         return SimulationSessionResponse.builder()
                 .sessionId(sessionId)
@@ -75,33 +77,28 @@ public class SimulationServiceImpl implements SimulationService {
                 .build();
     }
     
-        @Override
+    @Override
     public SimulationChoiceResponse submitChoice(String sessionId, SimulationChoiceRequest request) {
         try {
-            System.out.println("=== 서비스 submitChoice 호출 ===");
-            System.out.println("sessionId: " + sessionId);
-            System.out.println("choice: " + request.getChoice());
+            log.info("=== 서비스 submitChoice 호출 ===");
+            log.info("sessionId: {}", sessionId);
+            log.info("choice: {}", request.getChoice());
             
-            // 프론트에서 전달받은 정보로 처리 (로컬스토리지 기반)
-            // sessionId에서 simulationId 추출 (예: "session_123_1" -> 1)
             Long simulationId = extractSimulationIdFromSessionId(sessionId);
             int currentStep = extractCurrentStepFromSessionId(sessionId);
             
-            System.out.println("추출된 simulationId: " + simulationId);
-            System.out.println("추출된 currentStep: " + currentStep);
+            log.info("추출된 simulationId: {}", simulationId);
+            log.info("추출된 currentStep: {}", currentStep);
         
-        // 현재 단계의 선택지 조회
         SimulationStep currentStepData = stepRepository.findBySimulationIdAndStepOrder(simulationId, currentStep)
                 .orElseThrow(() -> new SimulationException(SimulationErrorCode.SIM_NOT_FOUND));
         
-        // 선택한 선택지의 점수 계산
         List<BifChoice> choices = choiceRepository.findByStepIdOrderByChoiceId(currentStepData.getStepId());
         BifChoice selectedChoice = choices.stream()
                 .filter(choice -> choice.getChoiceText().equals(request.getChoice()))
                 .findFirst()
                 .orElseThrow(() -> new SimulationException(SimulationErrorCode.SIM_INVALID_CHOICE));
         
-        // 다음 단계 정보 조회
         int nextStep = currentStep + 1;
         List<SimulationStep> allSteps = stepRepository.findBySimulationIdOrderByStepOrder(simulationId);
         boolean isCompleted = nextStep > allSteps.size();
@@ -120,7 +117,6 @@ public class SimulationServiceImpl implements SimulationService {
                     .toArray(String[]::new);
         }
         
-        // 다음 단계의 세션 ID 생성
         String nextSessionId = "session_" + System.currentTimeMillis() + "_" + simulationId + "_" + nextStep;
         
         return SimulationChoiceResponse.builder()
@@ -133,38 +129,37 @@ public class SimulationServiceImpl implements SimulationService {
                 .isCompleted(isCompleted)
                 .build();
         } catch (Exception e) {
-            System.err.println("서비스에서 예외 발생: " + e.getMessage());
-            e.printStackTrace();
+            log.error("서비스에서 예외 발생: {}", e.getMessage(), e);
             throw e;
         }
     }
     
     @Override
     public String getFeedbackText(Long simulationId, int score) {
-        // DB에서 점수 범위에 맞는 피드백을 찾기
+        log.info("피드백 조회 요청: simulationId={}, score={}", simulationId, score);
+        
         Optional<SimulationFeedback> feedback = feedbackRepository.findBySimulationIdAndScore(simulationId, score);
         
         if (feedback.isPresent()) {
+            log.info("피드백 조회 성공");
             return feedback.get().getFeedbackText();
         }
         
-        // 매칭되는 피드백이 없으면 기본 문구 반환
+        log.warn("피드백을 찾을 수 없음, 기본 메시지 반환");
         return "피드백 에러입니다.";
     }
     
     @Override
     public SimulationDetailsResponse getSimulationDetails(Long simulationId) {
-        // 시뮬레이션 존재 여부 확인
+        log.info("시뮬레이션 상세 정보 조회 요청: simulationId={}", simulationId);
+        
         Simulation simulation = simulationRepository.findById(simulationId)
                 .orElseThrow(() -> new SimulationException(SimulationErrorCode.SIM_NOT_FOUND));
         
-        // 시뮬레이션 스텝 목록 조회
         List<SimulationStep> steps = stepRepository.findBySimulationIdOrderByStepOrder(simulationId);
         
-        // 각 단계별 정보 구성
         List<SimulationDetailsResponse.SimulationStepResponse> stepResponses = steps.stream()
                 .map(step -> {
-                    // 해당 스텝의 선택지들 조회
                     List<BifChoice> choices = choiceRepository.findByStepIdOrderByChoiceId(step.getStepId());
                     
                     List<SimulationDetailsResponse.SimulationChoiceOptionResponse> choiceOptions = choices.stream()
@@ -173,7 +168,7 @@ public class SimulationServiceImpl implements SimulationService {
                                     .choiceScore(choice.getChoiceScore())
                                     .feedbackText(choice.getFeedbackText() != null ? choice.getFeedbackText() : "")
                                     .build())
-                            .collect(Collectors.toList());
+                            .toList();
                     
                     return SimulationDetailsResponse.SimulationStepResponse.builder()
                             .stepNumber(step.getStepOrder())
@@ -181,7 +176,9 @@ public class SimulationServiceImpl implements SimulationService {
                             .choices(choiceOptions)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
+        
+        log.info("시뮬레이션 상세 정보 조회 완료: {}단계", steps.size());
         
         return SimulationDetailsResponse.builder()
                 .simulationId(simulationId)
@@ -194,28 +191,29 @@ public class SimulationServiceImpl implements SimulationService {
     }
     
     public void saveScore(String sessionId, int score) {
-        // 로컬스토리지에서 처리하므로 서버에서는 불필요
         log.info("점수 저장 요청: sessionId={}, score={} (로컬스토리지에서 처리)", sessionId, score);
     }
 
-    // 추천 기능 구현
     @Override
     public void recommendSimulation(Long simulationId) {
-        // 추천 로직 구현
+        log.info("시뮬레이션 추천 기능 호출(구현 예정)", simulationId);
+        throw new UnsupportedOperationException("시뮬레이션 추천 기능은 아직 구현되지 않았습니다.");
     }
 
-    // 세션 ID에서 시뮬레이션 ID 추출
     private Long extractSimulationIdFromSessionId(String sessionId) {
-        // 예: "session_1754836913942_7_1" -> 7
         String[] parts = sessionId.split("_");
-        return Long.parseLong(parts[parts.length - 2]);
+        if (parts.length >= 4) {
+            return Long.parseLong(parts[2]);
+        }
+        throw new IllegalArgumentException("잘못된 sessionId 형식: " + sessionId);
     }
     
-    // 세션 ID에서 현재 단계 추출
     private int extractCurrentStepFromSessionId(String sessionId) {
-        // 예: "session_1754836913942_7_1" -> 1
         String[] parts = sessionId.split("_");
-        return Integer.parseInt(parts[parts.length - 1]);
+        if (parts.length >= 4) {
+            return Integer.parseInt(parts[3]);
+        }
+        throw new IllegalArgumentException("잘못된 sessionId 형식: " + sessionId);
     }
     
 
